--- a/style.css
+++ b/style.css
@@ -249,10 +249,10 @@ border-radius: 3px;
 .removeButton{
     color:white;
     margin-right:  5px; /*space between right and left*/
-    padding: 3px 10px;  
+    padding: 5px 10px 4px 10px;  
     border: none;         
     background-color: hsl(180, 29%, 50%); 
-    font-size:x-small;
+    font-size:15px;
     font-weight:bold;  
   
 }
@@ -420,6 +420,7 @@ gap: 5px;
    body{
     font-size:85%;
    }
+  
    .popupmainDiv{
     display: block;
     align-items: center;
@@ -461,8 +462,13 @@ gap: 5px;
     padding:  0px 7px 2px 7px;
    margin-right: 5px;
     }
-   #info .postedInfo{
+    h6.filterTag , .removeButton,#info .postedInfo{
         font-size:85%;
+      
+        
+    }
+    .removeButton{
+       padding-top:5px;
       
         
     }
@@ -475,8 +481,8 @@ gap: 5px;
         border-top:1px solid rgb(106, 106, 106);
         
     }
-    h6.tagDesign{
-font-size: 85%;
+    h6.tagDesign{ 
+font-size: smaller;
     }
     #image{
 
